--- a/scripts/package.json
+++ b/scripts/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "fast-glob": "^3.3.2",
+    "find-up": "^7.0.0",
     "markdown-table": "^3.0.3",
     "markdownlint": "^0.32.1",
     "rollup": "^4.9.1",
