--- a/scripts/package.json
+++ b/scripts/package.json
@@ -27,9 +27,12 @@
     "lint:md": "esno ./src/lint-md.ts",
     "size:build": "esno ./src/size/build.ts",
     "size:data": "esno ./src/size/data.ts",
-    "size:report": "esno ./src/size/report.ts"
+    "size:report": "esno ./src/size/report.ts",
+    "test": "vitest run"
   },
   "dependencies": {
+    "@pnpm/config": "^20.2.0",
+    "@types/ini": "^1.3.34",
     "fast-glob": "^3.3.2",
     "find-up": "^7.0.0",
     "markdown-table": "^3.0.3",
@@ -45,9 +48,11 @@
   "devDependencies": {
     "@clack/prompts": "^0.7.0",
     "@types/node": "^20.10.5",
+    "@vitest/coverage-v8": "^0.34.6",
     "esno": "^4.0.0",
     "execa": "^8.0.1",
     "picocolors": "^1.0.0",
-    "trash-cli": "^5.0.0"
+    "trash-cli": "^5.0.0",
+    "vitest": "^0.34.6"
   }
 }
