--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "build": "pnpm -r build",
-    "clean": "pnpm -r clean && trash .pnpm-store coverage temp && empty-trash",
+    "clean": "pnpm -r clean && trash .pnpm-store coverage temp",
     "changelog": "auto-changelog -p",
     "create:pkg": "pnpm -C scripts create:pkg",
     "deps:update": "taze -r -w -i -f -l --ignore-paths='third_party/**'",
@@ -43,11 +43,10 @@
     "@antfu/eslint-config": "2.4.6",
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
-    "@secretlint/secretlint-rule-preset-recommend": "^7.2.0",
+    "@secretlint/secretlint-rule-preset-recommend": "^8.0.0",
     "@size-limit/file": "^11.0.1",
     "auto-changelog": "^2.4.0",
-    "cspell": "^7.3.9",
-    "empty-trash-cli": "^2.0.0",
+    "cspell": "^8.2.3",
     "envinfo": "^7.11.0",
     "eslint": "^8.56.0",
     "eslint-flat-config-viewer": "^0.1.3",
