--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -42,17 +42,16 @@
   },
   "dependencies": {
     "@templ/logger": "workspace:*",
-    "sade": "^1.8.1",
-    "serialize-error": "^11.0.3"
+    "sade": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
-    "@vitest/coverage-v8": "^0.34.6",
+    "@vitest/coverage-v8": "^1.1.0",
     "find-monorepo-root": "^1.0.3",
     "trash-cli": "^5.0.0",
     "tsup": "^8.0.1",
     "vite-tsconfig-paths": "^4.2.2",
-    "vitest": "^0.34.6",
+    "vitest": "^1.1.0",
     "wireit": "^0.14.1"
   },
   "wireit": {
