--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -35,17 +35,15 @@
     "test:watch": "wireit"
   },
   "dependencies": {
-    "colorette": "^2.0.20",
-    "ora": "^7.0.1",
-    "serialize-error": "^11.0.3"
+    "picocolors": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
-    "@vitest/coverage-v8": "^0.34.6",
+    "@vitest/coverage-v8": "^1.1.0",
     "trash-cli": "^5.0.0",
     "tsup": "^8.0.1",
     "vite-tsconfig-paths": "^4.2.2",
-    "vitest": "^0.34.6",
+    "vitest": "^1.1.0",
     "wireit": "^0.14.1"
   },
   "wireit": {
