--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -29,12 +29,12 @@
     "node": "^18.8.0 || >=20.6.0"
   },
   "scripts": {
-    "build": "wireit",
-    "clean": "trash .wireit dist docs coverage",
-    "test": "wireit",
-    "test:watch": "wireit"
+    "build": "tsup",
+    "clean": "trash dist docs coverage",
+    "test": "vitest run"
   },
   "dependencies": {
+    "ora": "^7.0.1",
     "picocolors": "^1.0.0"
   },
   "devDependencies": {
@@ -42,41 +42,6 @@
     "@vitest/coverage-v8": "^1.1.0",
     "trash-cli": "^5.0.0",
     "tsup": "^8.0.1",
-    "vite-tsconfig-paths": "^4.2.2",
-    "vitest": "^1.1.0",
-    "wireit": "^0.14.1"
-  },
-  "wireit": {
-    "build": {
-      "command": "tsup",
-      "files": [
-        "src/**/*.ts",
-        "tsup.config.ts",
-        "tsconfig.json"
-      ],
-      "output": [
-        "dist/**"
-      ]
-    },
-    "test": {
-      "command": "vitest run",
-      "files": [
-        "test/**.test.ts",
-        "vitest.config.ts"
-      ],
-      "dependencies": [
-        "build"
-      ]
-    },
-    "test:watch": {
-      "command": "vitest run --watch",
-      "files": [
-        "test/**.test.ts",
-        "vitest.config.ts"
-      ],
-      "dependencies": [
-        "build"
-      ]
-    }
+    "vitest": "^1.1.0"
   }
 }
