--- a/scripts/package.json
+++ b/scripts/package.json
@@ -23,13 +23,13 @@
     "ci:check:dist": "esno ./src/ci/check-dist.ts",
     "ci:delete:env": "esno ./src/ci/delete-env.ts",
     "create:pkg": "esno ./src/create/pkg.ts",
-    "lint": "esno ./src/lint.ts",
+    "lint": "esno ./src/lint/main.ts",
     "lint:md": "esno ./src/lint/md.ts",
     "size:report": "esno ./src/size/report.ts",
     "test": "vitest run"
   },
   "dependencies": {
-    "@pnpm/config": "^20.2.0",
+    "@pnpm/config": "^20.3.0",
     "@types/ini": "^1.3.34",
     "esno": "^4.0.0",
     "execa": "^8.0.1",
@@ -44,12 +44,14 @@
     "totalist": "^3.0.1",
     "tsx": "^4.7.0",
     "type-fest": "^4.8.3",
+    "yargs-parser": "^21.1.1",
     "zod": "^3.22.4",
     "zx": "^7.2.3"
   },
   "devDependencies": {
     "@clack/prompts": "^0.7.0",
     "@types/node": "^20.10.5",
+    "@types/yargs-parser": "^21.0.3",
     "@vitest/coverage-v8": "^1.1.0",
     "vitest": "^1.1.0"
   }
