--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -15,7 +15,8 @@
     "url": "https://github.com/rjoydip/templ/issues"
   },
   "engines": {
-    "node": "^18.8.0 || >=20.6.0"
+    "node": "^18.8.0 || >=20.6.0",
+    "npm": ">=8"
   },
   "scripts": {
     "clean": "trash .vitepress",
@@ -24,6 +25,6 @@
     "docs:preview": "vitepress preview ."
   },
   "devDependencies": {
-    "vitepress": "1.0.0-rc.32"
+    "vitepress": "1.0.0-rc.33"
   }
 }
