--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,7 +26,8 @@
     "dist"
   ],
   "engines": {
-    "node": "^18.8.0 || >=20.6.0"
+    "node": "^18.8.0 || >=20.6.0",
+    "npm": ">=8"
   },
   "scripts": {
     "build": "tsup",
