--- a/scripts/package.json
+++ b/scripts/package.json
@@ -14,8 +14,10 @@
   "bugs": {
     "url": "https://github.com/rjoydip/templ/issues"
   },
+  "types": "scripts.d.ts",
   "engines": {
-    "node": "^18.8.0 || >=20.6.0"
+    "node": "^18.8.0 || >=20.6.0",
+    "npm": ">=8"
   },
   "scripts": {
     "all": "esno ./src/all.ts",
@@ -30,23 +32,23 @@
   },
   "dependencies": {
     "@pnpm/config": "^20.3.0",
-    "@types/ini": "^1.3.34",
+    "cpy": "^11.0.0",
     "esno": "^4.0.0",
     "execa": "^8.0.1",
-    "fast-glob": "^3.3.2",
     "find-up": "^7.0.0",
     "is-in-ci": "^0.1.0",
+    "latest-version": "^7.0.0",
     "markdown-table": "^3.0.3",
     "markdownlint": "^0.32.1",
+    "nypm": "^0.3.3",
     "picocolors": "^1.0.0",
+    "replace": "^1.2.2",
     "rollup": "^4.9.1",
-    "tempura": "^0.4.0",
     "terser": "^5.26.0",
     "totalist": "^3.0.1",
     "tsx": "^4.7.0",
-    "type-fest": "^4.8.3",
+    "type-fest": "^4.9.0",
     "yargs-parser": "^21.1.1",
-    "zod": "^3.22.4",
     "zx": "^7.2.3"
   },
   "devDependencies": {
