chore: reafctored husky hooks scripts

--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
   },
   "scripts": {
     "preinstall": "npx only-allow pnpm",
+    "prepare": "husky install",
     "all": "pnpm -C scripts all",
     "build": "pnpm -r build",
-    "clean": "pnpm -r clean && trash .pnpm-store coverage temp",
+    "clean": "pnpm -r clean && trash .pnpm-store temp",
     "changelog": "auto-changelog -p",
     "create:pkg": "pnpm -C scripts create:pkg",
     "eslint:viewer": "eslint-flat-config-viewer",
-    "prepare": "husky install",
     "size:report": "pnpm -C scripts size:report",
     "test": "pnpm -r test",
     "test:all": "pnpm test && pnpm test:cli",
