--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
   },
   "scripts": {
     "preinstall": "npx only-allow pnpm",
+    "prepare": "husky install",
     "all": "pnpm -C scripts all",
     "build": "pnpm -r build",
-    "clean": "pnpm -r clean && trash .pnpm-store coverage temp",
+    "clean": "pnpm -r clean && trash .pnpm-store temp",
     "changelog": "auto-changelog -p",
     "create:pkg": "pnpm -C scripts create:pkg",
     "eslint:viewer": "eslint-flat-config-viewer",
-    "prepare": "husky install",
     "size:report": "pnpm -C scripts size:report",
     "test": "pnpm -r test",
     "test:all": "pnpm test && pnpm test:cli",
@@ -42,7 +42,7 @@
     "@secretlint/secretlint-rule-preset-recommend": "^8.1.0",
     "@size-limit/file": "^11.0.1",
     "auto-changelog": "^2.4.0",
-    "cspell": "^8.2.3",
+    "cspell": "^8.2.4",
     "envinfo": "^7.11.0",
     "eslint": "^8.56.0",
     "eslint-flat-config-viewer": "^0.1.4",
