--- a/scripts/package.json
+++ b/scripts/package.json
@@ -32,17 +32,20 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@clack/prompts": "^0.7.0",
     "@pnpm/config": "^20.4.0",
     "cpy": "^11.0.0",
     "esno": "^4.0.0",
     "execa": "^8.0.1",
     "find-up": "^7.0.0",
+    "gittar": "^0.1.1",
     "is-in-ci": "^0.1.0",
     "latest-version": "^7.0.0",
     "markdown-table": "^3.0.3",
     "markdownlint": "^0.32.1",
     "marked": "^11.1.1",
     "marked-terminal": "^6.2.0",
+    "nypm": "^0.3.4",
     "picocolors": "^1.0.0",
     "replace": "^1.2.2",
     "rollup": "^4.9.2",
@@ -54,7 +57,6 @@
     "zx": "^7.2.3"
   },
   "devDependencies": {
-    "@clack/prompts": "^0.7.0",
     "@types/node": "^20.10.6",
     "@types/yargs-parser": "^21.0.3",
     "@vitest/coverage-v8": "^1.1.1",
