--- a/templates/ts-basic/package.json
+++ b/templates/ts-basic/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "@templ/basic",
+  "name": "@templ/ts-basic",
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "",
-  "description": "TEMPL basic service",
+  "packageManager": "pnpm@8.14.0",
+  "description": "TEMPL ts-basic service",
   "license": "MIT",
-  "homepage": "https://github.com/rjoydip/templ/tree/main/packages/basic#readme",
+  "homepage": "https://github.com/rjoydip/templ/tree/main/packages/ts-basic#readme",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rjoydip/templ.git",
-    "directory": "packages/basic"
+    "directory": "packages/ts-basic"
   },
   "bugs": {
     "url": "https://github.com/rjoydip/templ/issues"
