--- a/scripts/package.json
+++ b/scripts/package.json
@@ -54,8 +54,9 @@
     "zx": "^7.2.3"
   },
   "devDependencies": {
-    "@types/node": "^20.10.6",
+    "@types/node": "^20.10.7",
     "@types/yargs-parser": "^21.0.3",
+    "create-next-app": "^14.0.4",
     "del": "^7.1.0",
     "tsx": "^4.7.0"
   }
