--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
   },
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "postinstall": "pnpm deps:update",
-    "prepare": "husky install",
     "all": "pnpm -C scripts all",
     "build": "pnpm -r build",
     "clean": "pnpm -C scripts clean",
     "changelog": "auto-changelog -p",
     "create:stack": "pnpm -C scripts create:stack",
+    "done": "better-commits",
     "deps:update": "taze -r -w -i -f -l",
     "eslint:viewer": "eslint-flat-config-viewer",
+    "lint": "pnpm -C scripts lint",
     "size:report": "pnpm -C scripts size:report",
     "test": "pnpm -r test",
     "test:cli": "pnpm -r test:cli"
@@ -36,6 +36,7 @@
     "packages/**",
     "scripts"
   ],
+  "pre-commit": ["deps:update", "clean", "lint", "build", "test", "test:cli", "changelog"],
   "devDependencies": {
     "@antfu/eslint-config": "2.6.1",
     "@commitlint/cli": "^18.4.4",
@@ -43,14 +44,14 @@
     "@secretlint/secretlint-rule-preset-recommend": "^8.1.0",
     "@size-limit/file": "^11.0.1",
     "auto-changelog": "^2.4.0",
+    "better-commits": "^1.7.2",
     "cspell": "^8.3.2",
     "envinfo": "^7.11.0",
     "eslint": "^8.56.0",
     "eslint-flat-config-viewer": "^0.1.4",
-    "husky": "^8.0.3",
     "knip": "^3.12.0",
-    "nano-staged": "^0.8.0",
     "pnpm": "^8.14.0",
+    "pre-commit": "^1.2.2",
     "secretlint": "^8.1.0",
     "size-limit": "^11.0.1",
     "taze": "^0.13.1"
@@ -60,13 +61,6 @@
     "template": "keepachangelog",
     "unreleased": true,
     "commitLimit": false
-  },
-  "nano-staged": {
-    "*": [
-      "cspell .",
-      "secretlint --secretlintignore .gitignore \"**/*\""
-    ],
-    "*.{css, js,ts,jsx,tsx,md,json}": "eslint --color --cache --fix --cache-location .eslintcache ."
   },
   "knip": {
     "workspaces": {
